apps/moonlight/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moonlight
  labels:
    gateway-access: moonlight
