apps/moonlight/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moonlight-web
  labels:
    app: moonlight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moonlight
  template:
    metadata:
      labels:
        app: moonlight
        gateway-access: moonlight
    spec:
      nodeSelector:
        affected_vlan: "50"
      containers:
      - name: moonlight
        image: mrcreativ3001/moonlight-web-stream:v2.10.0@sha256:4ee561ec4043526e93b0b3dba4926031c86ee3c9dab0333475a6b3c7117c701a
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /app/server/config.json
          subPath: config.json
        - name: moonlight-nfs-storage
          mountPath: /app/server
      volumes:
      - name: config-volume
        configMap:
          name: config-map 
      - name: moonlight-nfs-storage
        persistentVolumeClaim:
          claimName: pvc
