apps/moonlight/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moonlight
  namespace: moonlight
spec:
  selector:
    app: moonlight
  ports:
  - port: 8080
    targetPort: 8080
