apps/moonlight/route.yaml
# apps/moonlight/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: moonlight-route
  namespace: moonlight
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway
      sectionName: moonlight-https     
  hostnames:
    - "moonlight.hoareau-marion.eu"
  rules:
    - backendRefs:
        - name: moonlight
          port: 8080
      timeouts:
        backendRequest: 3600s
